Customer - CRUD & Swagger & Tests
