# controllers/index.js
@@ -5,4 +5,5 @@ module.exports = {
   ...require('./restaurant.controller'),
   ...require('./courier.controller'),
   ...require('./product.controller'),
+  ...require('./customer.controller'),
 };
