# models/index.js
@@ -5,4 +5,5 @@ module.exports = {
   ...require('./restaurant.model'),
   ...require('./courier.model'),
   ...require('./product.model'),
+  ...require('./customer.model'),
 };
