# validators/index.js
@@ -5,4 +5,5 @@ module.exports = {
   ...require('./restaurant.validator'),
   ...require('./courier.validator'),
   ...require('./product.validator'),
+  ...require('./customer.validator'),
 };
